# libmicrodns

./: meson.build
compat/: compat.h
examples/: announce.c  main.c
src/: microdns-uninstalled.pc.in  microdns.h
